fix small spacing in park page

--- a/denver-perfect/scss/park.scss
+++ b/denver-perfect/scss/park.scss
@@ -124,6 +124,12 @@
       margin-left: 2%;
     }
   }
+  .section-park-demography {
+    .demograph-row {
+      height: auto;
+      padding: 2rem 0;
+    }
+  }
 }
 #map {
   height: 250px;
